--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <section class="about">
                 <h2>About Our Products</h2>
                 <p>We specialize in selling high-quality domestic appliances, including washing machines, fridges, and more. Whether you need bulk wholesale orders or a single unit, we've got you covered.</p>
+                <div class="product-images">
+                    <img src="appliances.jpg" alt="Various Domestic Appliances">
+                    <img src="washing-machine.jpg" alt="Washing Machine">
+                </div>
+                <p>For more information, contact us at: <strong><a href="tel:+447859247274">+447859247274</a></strong></p>
             </section>
 
             <section class="delivery">
