--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="product-images">
                     <img src="appliances.jpg" alt="Various Domestic Appliances">
                     <img src="washing-machine.jpg" alt="Washing Machine">
+		    <img src="fridge.jpg" alt="fridge">
                 </div>
                 <p>For more information, contact us at: <strong><a href="tel:+447859247274">+447859247274</a></strong></p>
             </section>
@@ -38,6 +39,11 @@
             <section class="delivery">
                 <h2>Delivery Information</h2>
                 <p>We deliver to Europe and Dubai with an estimated delivery time of 1 week to 1 month, depending on the country of destination.</p>
+		<div class="product-images">
+                    <img src="delivery.jpg" alt="Multiple delivery options">
+		    <img src="options.jpg" alt="Different delivery options">
+                </div>
+
             </section>
 
             <section class="contact">
