--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="delivery">
                 <h2>Delivery Information</h2>
                 <p>We deliver to Europe and Dubai with an estimated delivery time of 1 week to 1 month, depending on the country of destination.</p>
-		<div class="product-images">
+		<div class="delivery-options">
                     <img src="delivery.jpg" alt="Multiple delivery options">
 		    <img src="options.jpg" alt="Different delivery options">
                 </div>
